@@ -7,22 +7,24 @@
  */
 package org.opendaylight.yangtools.binding;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.base.VerifyException;
 import com.google.common.collect.ImmutableList;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
-import org.junit.Test;
+import java.util.HexFormat;
+import java.util.List;
+import org.junit.jupiter.api.Test;
 import org.opendaylight.yangtools.binding.test.mock.FooChild;
 import org.opendaylight.yangtools.binding.test.mock.FooRoot;
 import org.opendaylight.yangtools.binding.test.mock.InstantiatedFoo;
@@ -32,18 +34,16 @@ import org.opendaylight.yangtools.binding.test.mock.NodeChild;
 import org.opendaylight.yangtools.binding.test.mock.NodeChildKey;
 import org.opendaylight.yangtools.binding.test.mock.NodeKey;
 import org.opendaylight.yangtools.binding.test.mock.Nodes;
-import org.powermock.reflect.Whitebox;
 
-public class InstanceIdentifierTest {
-
+class InstanceIdentifierTest {
     @Test
-    public void constructWithPredicates() {
-        final InstanceIdentifier<Nodes> nodes = InstanceIdentifier.builder(Nodes.class).build();
+    void constructWithPredicates() {
+        final var nodes = DataObjectWildcard.builder(Nodes.class).build();
 
         assertNotNull(nodes);
         assertEquals(Nodes.class, nodes.getTargetType());
 
-        final InstanceIdentifier<Node> node = nodes.builder().child(Node.class).build();
+        final var node = nodes.toBuilder().child(Node.class).build();
 
         assertNotNull(node);
         assertEquals(Node.class, node.getTargetType());
@@ -52,10 +52,9 @@ public class InstanceIdentifierTest {
     }
 
     @Test
-    public void fluentConstruction() {
-        final InstanceIdentifier<Nodes> nodes = InstanceIdentifier.builder(Nodes.class).build();
-        final InstanceIdentifier<Node> node =
-                InstanceIdentifier.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
+    void fluentConstruction() {
+        final var nodes = DataObjectWildcard.builder(Nodes.class).build();
+        final var node = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
 
         assertNotNull(node);
         assertEquals(Node.class, node.getTargetType());
@@ -64,15 +63,13 @@ public class InstanceIdentifierTest {
     }
 
     @Test
-    public void negativeContains() {
-        final InstanceIdentifier<FooChild> fooChild =
-                InstanceIdentifier.builder(Nodes.class).child(InstantiatedFoo.class).child(FooChild.class).build();
+    void negativeContains() {
+        final var fooChild =
+            DataObjectWildcard.builder(Nodes.class).child(InstantiatedFoo.class).child(FooChild.class).build();
 
-        final InstanceIdentifier<Node> nodeTen = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(10)).build();
-        final InstanceIdentifier<Node> nodeOne = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(1)).build();
-        final InstanceIdentifier<Nodes> nodes = InstanceIdentifier.builder(Nodes.class).build();
+        final var nodeTen = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
+        final var nodeOne = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(1)).build();
+        final var nodes = DataObjectWildcard.builder(Nodes.class).build();
 
         assertFalse(fooChild.contains(nodeTen));
         assertFalse(nodeTen.contains(nodes));
@@ -85,37 +82,34 @@ public class InstanceIdentifierTest {
     }
 
     @Test
-    public void containsWildcarded() {
-        final InstanceIdentifier<Nodes> nodes = InstanceIdentifier.builder(Nodes.class).build();
-        final InstanceIdentifier<Node> wildcarded = InstanceIdentifier.builder(Nodes.class).child(Node.class).build();
-        final InstanceIdentifier<NodeChild> wildcardedChildren = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class)
-                .child(NodeChild.class).build();
+    void containsWildcarded() {
+        final var nodes = DataObjectWildcard.builder(Nodes.class).build();
+        final var wildcarded = DataObjectWildcard.builder(Nodes.class).child(Node.class).build();
+        final var wildcardedChildren =
+            DataObjectWildcard.builder(Nodes.class).child(Node.class).child(NodeChild.class).build();
 
-        assertTrue(wildcarded.isWildcarded());
-        assertTrue(wildcardedChildren.isWildcarded());
+        assertNull(wildcarded.tryToIdentifier());
+        assertNull(wildcardedChildren.tryToIdentifier());
 
-        final InstanceIdentifier<Node> nodeTen = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(10)).build();
-        final InstanceIdentifier<Node> nodeOne = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(1)).build();
+        final var nodeTen = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
+        final var nodeOne = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(1)).build();
 
-        assertFalse(nodeTen.isWildcarded());
-        assertFalse(nodeOne.isWildcarded());
+        assertNotNull(nodeTen.toIdentifier());
+        assertNotNull(nodeOne.toIdentifier());
         assertTrue(nodes.containsWildcarded(nodeOne));
         assertTrue(wildcarded.containsWildcarded(nodeOne));
         assertTrue(wildcarded.containsWildcarded(nodeTen));
-        assertFalse(InstanceIdentifier.builder(Nodes.class)
+        assertFalse(DataObjectWildcard.builder(Nodes.class)
                 .child(InstantiatedFoo.class).build().containsWildcarded(wildcarded));
 
-        final InstanceIdentifier<NodeChild> nodeTenChildWildcarded = InstanceIdentifier.builder(Nodes.class)
+        final var nodeTenChildWildcarded = DataObjectWildcard.builder(Nodes.class)
                 .child(Node.class, new NodeKey(10)).child(NodeChild.class).build();
 
-        assertTrue(nodeTenChildWildcarded.isWildcarded());
+        assertNull(nodeTenChildWildcarded.tryToIdentifier());
 
-        final InstanceIdentifier<NodeChild> nodeTenChild = InstanceIdentifier.builder(Nodes.class)
+        final var nodeTenChild = DataObjectWildcard.builder(Nodes.class)
                 .child(Node.class, new NodeKey(10)).child(NodeChild.class, new NodeChildKey(10)).build();
-        final InstanceIdentifier<NodeChild> nodeOneChild = InstanceIdentifier.builder(Nodes.class)
+        final var nodeOneChild = DataObjectWildcard.builder(Nodes.class)
                 .child(Node.class, new NodeKey(1)).child(NodeChild.class, new NodeChildKey(1)).build();
 
         assertFalse(nodeTenChildWildcarded.containsWildcarded(nodeOneChild));
@@ -123,136 +117,131 @@ public class InstanceIdentifierTest {
     }
 
     @Test
-    public void basicTests() {
-        final InstanceIdentifier<FooRoot> instanceIdentifier1 = InstanceIdentifier.create(FooRoot.class);
-        final InstanceIdentifier<FooRoot> instanceIdentifier2 = InstanceIdentifier.create(FooRoot.class);
-        final InstanceIdentifier<FooRoot> instanceIdentifier4 = InstanceIdentifier.create(FooRoot.class);
-        final InstanceIdentifier<NodeChild> instanceIdentifier3 = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(10)).child(NodeChild.class).build();
-        final Object object = new Object();
+    void basicTests() {
+        final var fooRoot1 = DataObjectWildcard.create(FooRoot.class);
+        final var fooRoot2 = DataObjectWildcard.create(FooRoot.class);
+        final var nodeChild =
+            DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(10)).child(NodeChild.class).build();
+        final var object = new Object();
 
-        assertTrue(instanceIdentifier1.equals(instanceIdentifier1));
-        assertFalse(instanceIdentifier1.equals(null));
-        assertFalse(instanceIdentifier1.equals(object));
-        assertTrue(instanceIdentifier1.equals(instanceIdentifier2));
+        assertEquals(fooRoot1, fooRoot1);
+        assertNotEquals(fooRoot1, null);
+        assertNotEquals(fooRoot1, object);
+        assertEquals(fooRoot1, fooRoot2);
+        assertNotEquals(fooRoot1, nodeChild);
+        assertEquals(fooRoot1.hashCode(), fooRoot2.hashCode());
 
-        Whitebox.setInternalState(instanceIdentifier2, "pathArguments", instanceIdentifier1.pathArguments);
-        Whitebox.setInternalState(instanceIdentifier4, "wildcarded", true);
+        final var node = DataObjectWildcard.create(Nodes.class).child(Node.class);
 
-        assertTrue(instanceIdentifier1.equals(instanceIdentifier2));
-        assertFalse(instanceIdentifier1.equals(instanceIdentifier3));
-        assertFalse(instanceIdentifier1.equals(instanceIdentifier4));
+        assertNotNull(DataObjectWildcard.unsafeOf(ImmutableList.copyOf(fooRoot1.steps())));
+        assertNotNull(DataObjectWildcard.create(Nodes.class).child(Node.class));
+        assertNotNull(DataObjectWildcard.create(Nodes.class).child(Node.class, new NodeKey(5)));
+        assertNotNull(node.augmentation(NodeAugmentation.class));
+        assertNotNull(fooRoot1.toString());
 
-        final InstanceIdentifier<Node> instanceIdentifier5 = InstanceIdentifier.create(Nodes.class).child(Node.class);
-        Whitebox.setInternalState(instanceIdentifier5, "hash", instanceIdentifier1.hashCode());
-        Whitebox.setInternalState(instanceIdentifier5, "wildcarded", false);
-
-        assertNotNull(InstanceIdentifier.unsafeOf(ImmutableList.copyOf(instanceIdentifier1.getPathArguments())));
-        assertNotNull(InstanceIdentifier.create(Nodes.class).child(Node.class));
-        assertNotNull(InstanceIdentifier.create(Nodes.class).child(Node.class, new NodeKey(5)));
-        assertNotNull(instanceIdentifier5.augmentation(NodeAugmentation.class));
-        assertNotNull(instanceIdentifier1.hashCode());
-        assertNotNull(instanceIdentifier1.toString());
-
-        final InstanceIdentifier.Builder instanceIdentifierBuilder = instanceIdentifier1.builder();
-        assertEquals(instanceIdentifier1.hashCode(), instanceIdentifierBuilder.hashCode());
+        final DataObjectWildcard.Builder instanceIdentifierBuilder = fooRoot1.toBuilder();
+        assertEquals(fooRoot1.hashCode(), instanceIdentifierBuilder.build().hashCode());
         assertNotNull(instanceIdentifierBuilder.augmentation(InstantiatedFoo.class));
         assertNotNull(instanceIdentifierBuilder.build());
     }
 
     @Test
-    public void firstIdentifierOfTest() {
-        final InstanceIdentifier<Node> instanceIdentifier =
-                InstanceIdentifier.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
-        final InstanceIdentifier<Nodes> nodesIdentifier = instanceIdentifier.firstIdentifierOf(Nodes.class);
-        assertNotNull(nodesIdentifier);
-        final InstanceIdentifier<DataObject> dataObjectIdentifier =
-                instanceIdentifier.firstIdentifierOf(DataObject.class);
-        assertNull(dataObjectIdentifier);
+    void firstIdentifierOfTest() {
+        final var node = DataObjectWildcard.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
+        assertEquals(DataObjectWildcard.create(Nodes.class), node.firstIdentifierOf(Nodes.class));
+        assertNull(node.firstIdentifierOf(DataObject.class));
     }
 
     @Test
-    public void firstKeyOfTest() {
-        final InstanceIdentifier<Node> instanceIdentifier =
-                InstanceIdentifier.builder(Nodes.class).child(Node.class, new NodeKey(10)).build();
-        final InstanceIdentifier<FooRoot> instanceIdentifier1 = InstanceIdentifier.create(FooRoot.class);
-        assertNotNull(instanceIdentifier.firstKeyOf(Node.class));
-        assertNull(instanceIdentifier1.firstKeyOf(Node.class));
+    void firstKeyOfTest() {
+        final var nodeKey = new NodeKey(10);
+        final var node = DataObjectWildcard.builder(Nodes.class).child(Node.class, nodeKey).build();
+        assertEquals(nodeKey, node.firstKeyOf(Node.class));
+        assertNull(DataObjectWildcard.create(FooRoot.class).firstKeyOf(Node.class));
     }
 
     @Test
-    public void keyOfTest() {
+    void keyOfTest() {
         final var key = new NodeKey(42);
-        assertEquals(key, InstanceIdentifier.keyOf(
-            new KeyedInstanceIdentifier<>(new KeyStep<>(Node.class, key), ImmutableList.of(), false, 0)));
+        final var step = new KeyStep<>(Node.class, key);
+        assertEquals(key, DataObjectWildcard.keyOf(new DataObjectWildcard.WithKey<>(List.of(step), step)));
     }
 
     @Test
-    public void serializationTest() throws IOException, ClassNotFoundException {
-        final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-        final ObjectOutputStream outputStream = new ObjectOutputStream(byteArrayOutputStream);
+    void serializationTest() throws Exception {
+        final var fooRoot = DataObjectWildcard.create(FooRoot.class);
+        final var baos = new ByteArrayOutputStream();
+        try (var oos = new ObjectOutputStream(baos)) {
+            oos.writeObject(fooRoot);
+            oos.flush();
+        }
 
-        final InstanceIdentifier<FooRoot> instanceIdentifier = InstanceIdentifier.create(FooRoot.class);
-        outputStream.writeObject(instanceIdentifier);
-        outputStream.flush();
-        outputStream.close();
+        final var bytes = baos.toByteArray();
+        assertEquals("""
+            aced0005737200276f72672e6f70656e6461796c696768742e79616e67746f6f6c732e62696e64696e672e4f5776310000000000000\
+            0010c0000787200276f72672e6f70656e6461796c696768742e79616e67746f6f6c732e62696e64696e672e4f527631000000000000\
+            00010c000078707704000000017372002b6f72672e6f70656e6461796c696768742e79616e67746f6f6c732e62696e64696e672e4e6\
+            f64655374657000000000000000000200024c000863617365547970657400114c6a6176612f6c616e672f436c6173733b4c00047479\
+            706571007e0004787070767200346f72672e6f70656e6461796c696768742e79616e67746f6f6c732e62696e64696e672e746573742\
+            e6d6f636b2e466f6f526f6f740000000000000000000000787078""", HexFormat.of().formatHex(bytes));
 
-        final ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(byteArrayOutputStream.toByteArray());
-        final ObjectInputStream inputStream = new ObjectInputStream(byteArrayInputStream);
-        final InstanceIdentifier<?> deserialized = (InstanceIdentifier<?>) inputStream.readObject();
-
-        assertEquals(instanceIdentifier, deserialized);
+        try (var ois = new ObjectInputStream(new ByteArrayInputStream(bytes))) {
+            assertEquals(fooRoot, ois.readObject());
+        }
     }
 
     @Test
-    public void equalsTest() {
-        final InstanceIdentifier.Builder<FooRoot> builder1 =  InstanceIdentifier.create(FooRoot.class).builder();
-        final InstanceIdentifier.Builder<FooRoot> builder2 =  InstanceIdentifier.create(FooRoot.class).builder();
-        final InstanceIdentifier.Builder<Nodes> builder3 =  InstanceIdentifier.create(Nodes.class).builder();
-        final InstanceIdentifier.Builder<Nodes> builder4 =  InstanceIdentifier.create(Nodes.class).builder();
-        final Object obj = new Object();
+    void equalsTest() {
+        final var fooRoot1 = DataObjectWildcard.create(FooRoot.class);
+        final var fooRoot2 = DataObjectWildcard.create(FooRoot.class);
+        assertEquals(fooRoot1, fooRoot2);
+        assertEquals(fooRoot2, fooRoot1);
+        assertEquals(fooRoot2, fooRoot2);
 
-        assertTrue(builder1.equals(builder2));
-        assertTrue(builder2.equals(builder1));
-        assertTrue(builder2.equals(builder2));
-        assertTrue(builder3.equals(builder4));
-        assertTrue(builder4.equals(builder4));
-        assertFalse(builder3.equals(builder1));
-        assertFalse(builder3.equals(null));
-        assertFalse(builder4.equals(null));
-        assertFalse(builder1.equals(obj));
+        final var nodes1 = DataObjectWildcard.create(Nodes.class);
+        final var nodes2 = DataObjectWildcard.create(Nodes.class);
+        assertEquals(nodes1, nodes2);
+        assertEquals(nodes2, nodes2);
 
-        builder3.child(Node.class, new NodeKey(10));
-        assertFalse(builder3.equals(builder4));
-        assertFalse(builder4.equals(builder3));
+        assertNotEquals(nodes1, fooRoot1);
+        assertNotEquals(nodes1, null);
+        assertNotEquals(nodes2, null);
+        assertNotEquals(fooRoot1, new Object());
 
-        builder4.child(Node.class, new NodeKey(20));
-        assertFalse(builder3.equals(builder4));
-        assertFalse(builder4.equals(builder3));
+        final var node1 = nodes1.child(Node.class, new NodeKey(10));
+        assertEquals(nodes1, nodes2);
+        assertNotEquals(nodes1, node1);
+        assertNotEquals(nodes2, node1);
+        assertEquals(nodes1, nodes2);
+
+        final var node2 = nodes2.child(Node.class, new NodeKey(20));
+        assertEquals(nodes1, nodes2);
+        assertNotEquals(nodes1, node2);
+        assertNotEquals(nodes2, node2);
+        assertNotEquals(node1, node2);
     }
 
     @Test
-    public void hashCodeTest() {
-        final InstanceIdentifier.Builder<FooRoot> builder1 =  InstanceIdentifier.create(FooRoot.class).builder();
-        final InstanceIdentifier.Builder<FooRoot> builder2 =  InstanceIdentifier.create(FooRoot.class).builder();
-        final InstanceIdentifier.Builder<Nodes> builder3 =  InstanceIdentifier.create(Nodes.class).builder();
-        final InstanceIdentifier.Builder<Nodes> builder4 =  InstanceIdentifier.create(Nodes.class).builder();
-        final Object obj = new Object();
+    void hashCodeTest() {
+        final var fooRoot1 = DataObjectWildcard.create(FooRoot.class);
+        final var fooRoot2 = DataObjectWildcard.create(FooRoot.class);
+        final var nodes1 = DataObjectWildcard.create(Nodes.class);
+        final var nodes2 = DataObjectWildcard.create(Nodes.class);
+        final var obj = new Object();
 
-        assertTrue(builder1.hashCode() == builder2.hashCode());
-        assertTrue(builder1.hashCode() != builder3.hashCode());
-        assertTrue(builder3.hashCode() == builder4.hashCode());
-        assertTrue(builder2.hashCode() != builder4.hashCode());
-        assertTrue(builder1.hashCode() != obj.hashCode());
+        assertEquals(fooRoot1.hashCode(), fooRoot2.hashCode());
+        assertNotEquals(fooRoot1.hashCode(), nodes1.hashCode());
+        assertEquals(nodes1.hashCode(), nodes2.hashCode());
+        assertNotEquals(fooRoot2.hashCode(), nodes2.hashCode());
+        assertNotEquals(fooRoot1.hashCode(), obj.hashCode());
 
-        builder3.child(Node.class, new NodeKey(10));
-
-        assertTrue(builder3.hashCode() != builder4.hashCode());
+        final var node = nodes1.child(Node.class, new NodeKey(10));
+        assertNotEquals(nodes1.hashCode(), node.hashCode());
     }
 
     @Test
-    public void verifyTargetTest() {
-        final InstanceIdentifier<Nodes> nodeId = InstanceIdentifier.create(Nodes.class);
+    void verifyTargetTest() {
+        final var nodeId = DataObjectWildcard.create(Nodes.class);
         assertSame(nodeId, nodeId.verifyTarget(Nodes.class));
         assertThrows(VerifyException.class, () -> nodeId.verifyTarget(Node.class));
     }
